# rinha-backend-rust-pg-2024-q1

./: Cargo.toml  Dockerfile  docker-compose.yml  executar-teste-local.sh  init.sql  nginx.conf  start-application.sh
src/: main.rs
